list of all comments is back

--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -1,5 +1,5 @@
 {% extends "sub_base.html" %}
-{% load account socialaccount comments_xtd %}
+{% load account socialaccount %}
 
 {% block page_top_end %}
   {% if user.is_superuser %}
