--- a/blog/templates/blog/includes/aside_nav_post_info.html
+++ b/blog/templates/blog/includes/aside_nav_post_info.html
@@ -3,12 +3,13 @@
   <p>
     <a class="card-link" href="{% url 'accounts:profile' slug=post.author.slug %}">
       Author:
-      {{ post.author }} -
+      {{ post.author }}
+      -
       {% if post.author.is_superuser %}
         {% if post.author.owner %}
-            Website Owner
+          Website Owner
         {% else %}
-            Admin
+          Admin
         {% endif %}
       {% elif post.author.is_staff %}
         Staff
@@ -18,44 +19,71 @@
     </a>
   </p>
   <div class="mb-2">
-    <p class="mb-0">Created: {{ post.created_date|date:'l, d F Y H:i:s' }}</p>
+    <p class="mb-0">Created:
+      {{ post.created_date|date:'l, d F Y H:i:s' }}</p>
     {% if post.pub_date %}
-      <p class="mb-0">Published: {{ post.pub_date|date:'l, d F Y H:i:s' }}</p>
+      <p class="mb-0">Published:
+        {{ post.pub_date|date:'l, d F Y H:i:s' }}</p>
     {% endif %}
     {% if post.modified_date %}
-      <p class="mb-0">Updated: {{ post.modified_date|date:'l, d F Y H:i:s' }}</p>
+      <p class="mb-0">Updated:
+        {{ post.modified_date|date:'l, d F Y H:i:s' }}</p>
     {% endif %}
     {% if post.featured_title %}
-      <p>Featured Title: {{ post.featured_title }}</p>
+      <p>Featured Title:
+        {{ post.featured_title }}</p>
     {% endif %}
   </div>
 
-  <p>Description: {{ description }}</p>
+  <p>Description:
+    {{ description }}</p>
 
-  {% if post.tags %}
+  {% if post.get_tags and not user.is_superuser or post.get_admin_tags and user.is_superuser %}
     <p>Tags:
-      {% for tags in post.tags.all %}
-        {% if not tags.withdrawn or user.is_superuser %}
-          {% comment %} TODO: Make a list of the public tags, the withdrawn ones, and subtract to get the actual number for both users and supers {% endcomment %}
+      {% if not user.is_superuser %}
+        {% for tag in post.get_tags %}
           {% spaceless %}
-          <a href="{% url 'blog:post_tagged_with' slug=tags.slug %}">{{ tags }}</a>
+            <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}">{{ tag }}</a>
             {% if not forloop.last %}
               <span>,</span>
             {% endif %}
           {% endspaceless %}
+        {% endfor %}
+      {% else %}
+        {% for tag in post.get_admin_tags %}
+          {% spaceless %}
+            <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}">{{ tag }}</a>
+            {% if not forloop.last %}
+              <span>,</span>
+            {% endif %}
+          {% endspaceless %}
+        {% endfor %}
+      {% endif %}
+    </p>
+
+    <p>Similar Posts:
+      {% for e in similar_posts %}
+        {% if not e.withdrawn and not e.is_scheduled or user.is_superuser %}
+          {% spaceless %}
+            <a href="{{ e.get_absolute_url }}">{{ e }}</a>
+            {% if not forloop.last %}
+              <span>,</span>{% endif %}
+          {% endspaceless %}
         {% endif %}
       {% endfor %}
     </p>
-    <p>Similar Posts: {% for e in similar_posts %}{% if not e.withdrawn and not e.is_scheduled or user.is_superuser %}<a href="{{ e.get_absolute_url }}">{{ e }}</a>{% if not forloop.last %}, {% endif %}{% endif %}{% endfor %}</p>
   {% endif %}
 
-  <p>Clicks: {{ post.clicks }}</p>
+  <p>Clicks:
+    {{ post.clicks }}</p>
   <p>Categories:
     {% include 'blog/includes/post_categories.html' %}
   </p>
   {% if user.is_superuser %}
     <h6>Admin Information</h6>
-    <p class="mb-0">Withdrawn: {{ post.withdrawn }}</p>
-    <p>Scheduled: {{ post.is_scheduled }}</p>
+    <p class="mb-0">Withdrawn:
+      {{ post.withdrawn }}</p>
+    <p>Scheduled:
+      {{ post.is_scheduled }}</p>
   {% endif %}
 </div>
