--- a/blog/templates/blog/includes/aside_nav_post_info.html
+++ b/blog/templates/blog/includes/aside_nav_post_info.html
@@ -25,9 +25,9 @@
       <p class="mb-0">Published:
         {{ post.pub_date|date:'l, d F Y H:i:s' }}</p>
     {% endif %}
-    {% if post.modified_date %}
+    {% if post.mod_date %}
       <p class="mb-0">Updated:
-        {{ post.modified_date|date:'l, d F Y H:i:s' }}</p>
+        {{ post.mod_date|date:'l, d F Y H:i:s' }}</p>
     {% endif %}
     {% if post.featured_title %}
       <p>Featured Title:
