--- a/blog/templates/blog/includes/aside_nav_post_info.html
+++ b/blog/templates/blog/includes/aside_nav_post_info.html
@@ -1,4 +1,4 @@
-<div class="card p-4 mb-2 rounded shadow">
+<div class="card p-4 mb-2 shadow">
   <h4 class="fst-italic">About this Post</h4>
   <p>
     <a class="card-link" href="{% url 'accounts:profile' slug=post.author.slug %}">
