--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -4,7 +4,7 @@
 {% block main %}
   {% for project in projects %}
     {% if project.featured %}
-      <div class="card p-4 rounded mb-2 shadow">
+      <div class="card p-4 mb-2 shadow">
         <div class="container">
           <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Project</strong>
           <h1 class="display-4">{{ project.title }}</h1>
