--- a/khoBlog/templates/sub_base_main.html
+++ b/khoBlog/templates/sub_base_main.html
@@ -13,7 +13,7 @@
     {% load project_tags %}
 
     <div class="collapse" id="collapseExample">
-      <div class="card p-4 mb-2 rounded shadow">
+      <div class="card p-4 mb-2 shadow">
         <form class="card formcard" method="get">
           <h4 class="fst-italic">Filters</h4>
           <div class="text-danger">
