--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -1,6 +1,6 @@
 {% load static socialaccount default_app_theme_set footer_set sitetree compress analytical google_analytics_gtag activeurl djversion_tags %}
 {% comment %} {% endcomment %}
-{% if enable_tailwind_flag %}
+{% if enable_tailwind_flag or user.enable_tailwind  %}
   {% load tailwind_tags %}
 {% endif %}
 <!DOCTYPE html>
@@ -72,7 +72,7 @@
     {% block additional_js %}{% endblock additional_js %}
     {% block additional_css %}{% endblock additional_css %}
 
-    {% if not enable_tailwind_flag %}
+    {% if not enable_tailwind_flag and not user.enable_tailwind  %}
       <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap-icons/font/bootstrap-icons.css' %}" media="screen">
 
       {% compress js %}
@@ -89,7 +89,7 @@
       <!-- base! favicon -->
       <link rel="shortcut icon" type="image/png" href="{% static 'khoBlog/img/favicon.ico' %}"/>
 
-      {% if not enable_tailwind_flag %}
+      {% if not enable_tailwind_flag and not user.enable_tailwind  %}
         <!-- rel! Fonts / Icons -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet" media="screen">
@@ -101,7 +101,7 @@
         {% endcompress css %}
       {% endif %}
 
-      {% if enable_tailwind_flag %}
+      {% if enable_tailwind_flag or user.enable_tailwind  %}
         {% tailwind_css %}
       {% endif %}
     {% endblock rel %}
@@ -113,7 +113,7 @@
     {% endif %}
   </head>
 
-  {% if not enable_tailwind_flag %}
+  {% if not enable_tailwind_flag and not user.enable_tailwind %}
     <body class="wrapper {% if user.is_authenticated %}{{ user.default_theme }}{% else %}{% spaceless %}{% dt_setting themes %}{% endspaceless %}{% endif %}">
   {% else %}
     <body class="antialiased text-gray-800 bg-white dark:bg-gray-800 dark:text-gray-100">
