--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -176,7 +176,7 @@
           {% endif %}
 
           <span class="col">
-            <a role="button" class="float-end card-link" data-bs-toggle="offcanvas" data-bs-target="#postOffCanvas-{{ object.slug }}" aria-controls="postOffCanvas-{{ object.slug }}">Post Info</a>
+            <a role="button" class="float-end card-link" data-bs-toggle="offcanvas" data-bs-target="#postOffCanvas-{{ object.slug }}" aria-controls="postOffCanvas-{{ object.slug }}">Post info</a>
           </span>
         </span>
       </footer>
