--- a/khoBlog/static/khoBlog/css/_variables.scss
+++ b/khoBlog/static/khoBlog/css/_variables.scss
@@ -509,7 +509,7 @@ $black-white: (
 $enable-grid-classes: true;
 $enable-cssgrid: false;
 
-$enable-rounded: false;
+$enable-rounded: true;
 
 $sans-serif: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
