--- a/khoBlog/templates/tailwind/base_tailwind.html
+++ b/khoBlog/templates/tailwind/base_tailwind.html
@@ -1,55 +1,158 @@
-<main role="main" class="mb-2 px-2">
-  <section class="container mx-auto">
-    <p class="text-purple-500 text-2xl font-medium border-b-2 border-purple-200">Khodok's Blog -
-      {{ title }}</p>
+{% load static %}
 
-    <section class="grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-2">
-      {% for post in posts %}
-        <!-- card -->
-        <article class="overflow-hidden shadow-lg rounded-lg h-90 w-100 md:w-80 m-auto">
-          <section class="bg-white dark:bg-gray-700 dark:text-gray-100 w-full p-4">
-            <p class="text-purple-500 text-2xl font-medium">
-              {{ post.title|truncatewords_html:7 }}
-            </p>
-            <p class="dark:text-gray-100 text-sm font-medium mb-2">
-              {% if not post.pub_date %}
-                {{ post.created_date|date:'l, d F Y H:i:s' }}
-              {% else %}
-                {{ post.pub_date|date:'l, d F Y H:i:s' }}
-              {% endif %}
-            </p>
-            <p class="text-gray-400 font-light text-md">
-              {{ post.description }}
-              <a class="inline-flex text-purple-500" href="{{ post.get_absolute_url }}">Read More</a>
-            </p>
-            <section class="flex flex-wrap justify-starts items-center py-3 border-b-2 text-xs text-white font-medium">
-              <span class="m-1 px-2 py-1 rounded bg-purple-500">
-                {% if post.get_featured_cat %}
-                  <strong>
-                    <a class="cat-link" href="{{ post.get_featured_cat.category.get_absolute_url }}">{{ post.featured_cat_title|capfirst }}</a>
-                  </strong>
-                {% else %}
-                  <strong>
-                    <a class="cat-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a>
-                  </strong>
-                {% endif %}
-              </span>
-            </section>
-            <section class="flex items-center mt-2">
-              <img class='w-10 h-10 object-cover rounded-full' alt='User avatar' src='{{ post.author.profile_pic.url }}' loading="lazy">
+<div class="items-center mx-auto">
+  <div class="text-gray-400 bg-gray-900 body-font transition duration-500 ease-in-out transform shadow-lg">
+    <div class="flex flex-col flex-wrap p-5 mx-auto md:items-center md:flex-row">
+      <a href="{% url 'blog:post_list' %}" class="pr-2 lg:pr-8 lg:px-6 focus:outline-none">
+        <div class="inline-flex items-center">
+          <img class='w-8 h-8 object-cover rounded-full' alt='RuthinkkTooBig' src="{% static 'khoBlog/img/RuthinkkTooBig.png' %}" loading="lazy">
+          <h2 class="block p-2 text-xl font-medium tracking-tighter transition duration-500 ease-in-out transform cursor-pointer hover:text-purple-500 lg:text-x lg:mr-8">
+            Khodok's
+            {{ app_title }}
+          </h2>
+        </div>
+      </a>
+      <nav class="flex flex-wrap items-center text-base justify-left">
+        <ul class="items-center inline-block list-none lg:inline-flex">
+          <li>
+            <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">Pricing</a>
+          </li>
+          <li>
+            <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">Contact</a>
+          </li>
+          <li>
+            <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">Services</a>
+          </li>
+          <li>
+            <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">Now</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="block p-2 mr-4 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-full focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 lg:ml-auto">
+        <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto icon icon-tabler icon-tabler-logout" width="24" height="24" viewbox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2"></path>
+          <path d="M7 12h14l-3 -3m0 6l3 -3"></path>
+        </svg>
+      </button>
+      <div class="relative ml-3">
+        <div>
+          <button class="flex text-sm bg-purple-800 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-purple-800 focus:ring-white" id="user-menu" aria-haspopup="true">
+            <span class="sr-only">Open user menu</span>
+            {% if user.profile_pic %}
+              <img class="w-8 h-8 rounded-full" src="{{ user.profile_pic.url }}" alt="Profile Pic of {{ user.username }}" loading="lazy"/>
+            {% else %}
+              <img class="w-8 h-8 rounded-full" src="{% static 'khoBlog/img/default_profile_picture.png' %}" alt="Default Profile Pic" loading="lazy"/>
+            {% endif %}
+          </button>
+        </div>
+        <div class="absolute right-0 hidden w-48 px-4 py-2 mt-2 transition duration-500 ease-in-out origin-top-right transform bg-white border rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 e" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
+          <a href="#" class="block px-4 py-1 my-1 text-sm text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-purple-100 " role="menuitem">Your Profile</a>
+          <a href="#" class="block px-4 py-1 my-1 text-sm text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-purple-100 " role="menuitem">Settings</a>
+          <a href="#" class="block px-4 py-1 my-1 text-sm text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-purple-100 " role="menuitem">Sign out</a>
+        </div>
+      </div>
+    </div>
+    <div class="p-5 mt-3 overflow-y-auto border-t whitespace-nowrap scroll-hidden">
+      <ul class="inline-flex items-center list-none">
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Pricing</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Contact</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Services</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Now</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Pricing</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Contact</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Services</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Now</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Pricing</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Contact</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Services</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Now</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Pricing</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Contact</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Services</a>
+        </li>
+        <li>
+          <a href="#" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500 ">Now</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
 
-              <div class="pl-3">
-                <div class="font-medium">
-                  {{ post.author }}
-                </div>
-                <div class="text-gray-400 text-sm">
-                  {{ post.author.roles.all.last }}
-                </div>
-              </div>
-            </section>
-          </section>
-        </article>
-      {% endfor %}
+<main role="main">
+  <section class="text-gray-400 bg-gray-900 body-font">
+    <section class="container px-5 py-5 mx-auto">
+      <section class="flex flex-wrap -m-4">
+        {% for post in posts %}
+          <article class="p-4 md:w-1/3">
+            <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
+              <section class="p-6">
+                <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">
+                  {% if post.get_featured_cat %}
+                    <strong>
+                      <a class="cat-link" href="{{ post.get_featured_cat.category.get_absolute_url }}">{{ post.featured_cat_title|upper }}</a>
+                    </strong>
+                  {% else %}
+                    <strong>
+                      <a class="cat-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|upper }}</a>
+                    </strong>
+                  {% endif %}
+                </h2>
+                <h1 class="title-font text-lg font-medium text-white mb-3">{{ post.title }}</h1>
+                <p class="leading-relaxed mb-3">{{ post.description }}</p>
+                <section class="flex items-center flex-wrap ">
+                  <a class="text-purple-400 inline-flex items-center md:mb-2 lg:mb-0" href="{{ post.get_absolute_url }}">Learn More
+                    <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <path d="M5 12h14"></path>
+                      <path d="M12 5l7 7-7 7"></path>
+                    </svg>
+                  </a>
+                  <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
+                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewbox="0 0 24 24">
+                      <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                      <circle cx="12" cy="12" r="3"></circle>
+                    </svg>{{ post.clicks }}
+                  </span>
+                  <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"/>
+                    </svg>{{ post.tags.count }}
+                  </span>
+                </section>
+              </section>
+            </div>
+          </article>
+        {% endfor %}
+      </section>
     </section>
   </section>
 </main>
