--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -2,101 +2,150 @@
 {% load static featured_post offcanvas post_cards %}
 
 {% block page_top %}
+  {% if not enable_tailwind_flag and not user.enable_tailwind %}
+    {% if show_featured %}
+      {% block page_top_featured %}
+        {% featured_big_posts %}
+        {% featured_posts %}
+      {% endblock page_top_featured %}
+    {% endif %}
 
-  {% if show_featured %}
-    {% block page_top_featured %}
-      {% featured_big_posts %}
-      {% featured_posts %}
-    {% endblock page_top_featured %}
+    {% if previous_year or next_year or previous_month or next_month or previous_week or next_week or previous_day or next_day %}
+      <nav class="w-100">
+        {% if previous_year or next_year %}
+          <div>
+            {% if previous_year %}
+              Previous Year:
+              <a href="{% url 'blog:archive_year' year=previous_year|date:'Y' %}">{{ previous_year|date:"Y" }}</a>
+            {% endif %}
+            {% if previous_year and next_year %}--{% endif %}
+            {% if next_year %}
+              Next Year:
+              <a href="{% url 'blog:archive_year' year=next_year|date:'Y' %}">{{ next_year|date:"Y" }}</a>
+            {% endif %}
+          </div>
+        {% endif %}
+
+        {% if previous_month or next_month %}
+          <div>
+            {% if previous_month %}
+              Previous Month:
+              <a href="{% url 'blog:archive_month' year=previous_month|date:'Y' month=previous_month|date:'M' %}">{{ previous_month|date:"F Y" }}</a>
+            {% endif %}
+            {% if previous_month and next_month %}--{% endif %}
+            {% if next_month %}
+              Next Month:
+              <a href="{% url 'blog:archive_month' year=next_month|date:'Y' month=next_month|date:'M' %}">{{ next_month|date:"F Y" }}</a>
+            {% endif %}
+          </div>
+        {% endif %}
+
+        {% if previous_week or next_week %}
+          <div>
+            {% if previous_week %}
+              Previous Week:
+              <a href="{% url 'blog:archive_week' year=previous_week|date:'Y' week=previous_week|date:'W' %}">{{ previous_week|date:"W" }}
+                of
+                {{ previous_week|date:"Y" }}</a>
+            {% endif %}
+            {% if previous_week and next_week %}--{% endif %}
+            {% if next_week %}
+              Next week:
+              <a href="{% url 'blog:archive_week' year=next_week|date:'Y' week=next_week|date:'W' %}">{{ next_week|date:"W" }}
+                of
+                {{ next_week|date:"Y" }}</a>
+            {% endif %}
+          </div>
+        {% endif %}
+
+        {% if previous_day or next_day %}
+          <div>
+            {% if previous_day %}
+              Previous Day:
+              <a href="{% url 'blog:archive_day' year=previous_day|date:'Y' month=previous_day|date:'M' day=previous_day|date:'d' %}">{{ previous_day }}</a>
+            {% endif %}
+            {% if previous_day and next_day %}--{% endif %}
+            {% if next_day %}
+              Next Day:
+              <a href="{% url 'blog:archive_day' year=next_day|date:'Y' month=next_day|date:'M' day=next_day|date:'d' %}">{{ next_day }}</a>
+            {% endif %}
+          </div>
+        {% endif %}
+      </nav>
+    {% endif %}
+
+    {% block page_top_hr %}
+      <div class='text-then-hr text-small text-muted'>
+        <span class='hr-title'><span class="me-2">{{ posts.count }}
+            Post{{ posts.count|pluralize:'s' }}</span></span>
+      </div>
+    {% endblock page_top_hr %}
   {% endif %}
-
-  {% if previous_year or next_year or previous_month or next_month or previous_week or next_week or previous_day or next_day %}
-    <nav class="w-100">
-      {% if previous_year or next_year %}
-        <div>
-          {% if previous_year %}
-            Previous Year:
-            <a href="{% url 'blog:archive_year' year=previous_year|date:'Y' %}">{{ previous_year|date:"Y" }}</a>
-          {% endif %}
-          {% if previous_year and next_year %}--{% endif %}
-          {% if next_year %}
-            Next Year:
-            <a href="{% url 'blog:archive_year' year=next_year|date:'Y' %}">{{ next_year|date:"Y" }}</a>
-          {% endif %}
-        </div>
-      {% endif %}
-
-      {% if previous_month or next_month %}
-        <div>
-          {% if previous_month %}
-            Previous Month:
-            <a href="{% url 'blog:archive_month' year=previous_month|date:'Y' month=previous_month|date:'M' %}">{{ previous_month|date:"F Y" }}</a>
-          {% endif %}
-          {% if previous_month and next_month %}--{% endif %}
-          {% if next_month %}
-            Next Month:
-            <a href="{% url 'blog:archive_month' year=next_month|date:'Y' month=next_month|date:'M' %}">{{ next_month|date:"F Y" }}</a>
-          {% endif %}
-        </div>
-      {% endif %}
-
-      {% if previous_week or next_week %}
-        <div>
-          {% if previous_week %}
-            Previous Week:
-            <a href="{% url 'blog:archive_week' year=previous_week|date:'Y' week=previous_week|date:'W' %}">{{ previous_week|date:"W" }}
-              of
-              {{ previous_week|date:"Y" }}</a>
-          {% endif %}
-          {% if previous_week and next_week %}--{% endif %}
-          {% if next_week %}
-            Next week:
-            <a href="{% url 'blog:archive_week' year=next_week|date:'Y' week=next_week|date:'W' %}">{{ next_week|date:"W" }}
-              of
-              {{ next_week|date:"Y" }}</a>
-          {% endif %}
-        </div>
-      {% endif %}
-
-      {% if previous_day or next_day %}
-        <div>
-          {% if previous_day %}
-            Previous Day:
-            <a href="{% url 'blog:archive_day' year=previous_day|date:'Y' month=previous_day|date:'M' day=previous_day|date:'d' %}">{{ previous_day }}</a>
-          {% endif %}
-          {% if previous_day and next_day %}--{% endif %}
-          {% if next_day %}
-            Next Day:
-            <a href="{% url 'blog:archive_day' year=next_day|date:'Y' month=next_day|date:'M' day=next_day|date:'d' %}">{{ next_day }}</a>
-          {% endif %}
-        </div>
-      {% endif %}
-    </nav>
-  {% endif %}
-
-  {% block page_top_hr %}
-    <div class='text-then-hr text-small text-muted'>
-      <span class='hr-title'><span class="me-2">{{ posts.count }}
-          Post{{ posts.count|pluralize:'s' }}</span></span>
-    </div>
-  {% endblock page_top_hr %}
-
 {% endblock page_top %}
 
 {% block content_main %}
 
-  <section class="row row-cols-1 row-cols-lg-3 me-0">
-    {% for post in posts %}
-      <section class="mb-2 pe-0">
-        {% comment %} {% endcomment %}
-        {% render_cards post in_list=True %}
+  {% if not enable_tailwind_flag and not user.enable_tailwind %}
+    <section class="row row-cols-1 row-cols-lg-3 me-0">
+      {% for post in posts %}
+        <section class="mb-2 pe-0">
+          {% comment %} {% endcomment %}
+          {% render_cards post in_list=True %}
 
-        {% offcanvas post %}
+          {% offcanvas post %}
+        </section>
+        {% empty %}
+        <section class="w-100">
+          <p>No content here.</p>
+        </section>
+      {% endfor %}
+    </section>
+  {% else %}
+    <section class="text-gray-400 bg-gray-900 body-font">
+      <section class="container px-5 py-5 mx-auto">
+        <section class="flex flex-wrap -m-4">
+          {% for post in posts %}
+            <article class="p-4 md:w-1/3">
+              <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
+                <section class="p-6">
+                  <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">
+                    {% if post.get_featured_cat %}
+                      <strong>
+                        <a class="cat-link" href="{{ post.get_featured_cat.category.get_absolute_url }}">{{ post.featured_cat_title|upper }}</a>
+                      </strong>
+                    {% else %}
+                      <strong>
+                        <a class="cat-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|upper }}</a>
+                      </strong>
+                    {% endif %}
+                  </h2>
+                  <h1 class="title-font text-lg font-medium text-white mb-3">{{ post.title }}</h1>
+                  <p class="leading-relaxed mb-3">{{ post.description }}</p>
+                  <section class="flex items-center flex-wrap ">
+                    <a class="text-purple-400 inline-flex items-center md:mb-2 lg:mb-0" href="{{ post.get_absolute_url }}">Learn More
+                      <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M5 12h14"></path>
+                        <path d="M12 5l7 7-7 7"></path>
+                      </svg>
+                    </a>
+                    <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
+                      <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewbox="0 0 24 24">
+                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                        <circle cx="12" cy="12" r="3"></circle>
+                      </svg>{{ post.clicks }}
+                    </span>
+                    <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"/>
+                      </svg>{{ post.tags.count }}
+                    </span>
+                  </section>
+                </section>
+              </div>
+            </article>
+          {% endfor %}
+        </section>
       </section>
-      {% empty %}
-      <section class="w-100">
-        <p>No content here.</p>
-      </section>
-    {% endfor %}
-  </section>
+    </section>
+  {% endif %}
 {% endblock content_main %}
