--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -239,6 +239,63 @@
       </nav>
 
       {% include 'includes/nav/undernav.html' %}
+    {% else %}
+      <div class="items-center mx-auto">
+        <div class="text-gray-400 bg-gray-900 body-font transition duration-500 ease-in-out transform shadow-lg">
+          <div class="flex flex-col flex-wrap p-5 mx-auto md:items-center md:flex-row">
+            <a href="{% url 'blog:post_list' %}" class="pr-2 lg:pr-8 lg:px-6 focus:outline-none">
+              <div class="inline-flex items-center">
+                <img class='w-8 h-8 object-cover rounded-full' alt='RuthinkkTooBig' src="{% static 'khoBlog/img/RuthinkkTooBig.png' %}" loading="lazy">
+                <h2 class="block p-2 text-xl font-medium tracking-tighter transition duration-500 ease-in-out transform cursor-pointer hover:text-purple-500 lg:text-x lg:mr-8">
+                  Khodok's
+                  {{ app_title }}
+                </h2>
+              </div>
+            </a>
+            <nav class="flex flex-wrap items-center text-base justify-left">
+              <ul class="items-center inline-block list-none lg:inline-flex">
+                <li>
+                  <a href="{% url 'admin:index' %}" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">Admin</a>
+                </li>
+              </ul>
+            </nav>
+            <button class="block p-2 mr-4 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-full focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 lg:ml-auto">
+              <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto icon icon-tabler icon-tabler-logout" width="24" height="24" viewbox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2"></path>
+                <path d="M7 12h14l-3 -3m0 6l3 -3"></path>
+              </svg>
+            </button>
+            <div class="relative ml-3">
+              <div>
+                <button class="flex text-sm bg-purple-800 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-purple-800 focus:ring-white" id="user-menu" aria-haspopup="true">
+                  <span class="sr-only">Open user menu</span>
+                  {% if user.profile_pic %}
+                    <img class="w-8 h-8 rounded-full" src="{{ user.profile_pic.url }}" alt="Profile Pic of {{ user.username }}" loading="lazy"/>
+                  {% else %}
+                    <img class="w-8 h-8 rounded-full" src="{% static 'khoBlog/img/default_profile_picture.png' %}" alt="Default Profile Pic" loading="lazy"/>
+                  {% endif %}
+                </button>
+              </div>
+              <div class="absolute right-0 hidden w-48 px-4 py-2 mt-2 transition duration-500 ease-in-out origin-top-right transform bg-white border rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 e" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
+                <a href="#" class="block px-4 py-1 my-1 text-sm text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-purple-100 " role="menuitem">Your Profile</a>
+                <a href="#" class="block px-4 py-1 my-1 text-sm text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-purple-100 " role="menuitem">Settings</a>
+                <a href="#" class="block px-4 py-1 my-1 text-sm text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-purple-100 " role="menuitem">Sign out</a>
+              </div>
+            </div>
+          </div>
+          <div class="p-5 overflow-y-auto border-t whitespace-nowrap scroll-hidden">
+            {% load render_urls links_menu featured_post activeurl %}
+
+            <ul class="inline-flex items-center list-none">
+                {% links_menu urls %}
+                {% featured_big_post_list urls %}
+                {% featured_post_list urls %}
+                {% links urls %}
+            </ul>
+          </div>
+        </div>
+      </div>
     {% endif %}
 
     {% if not enable_tailwind_flag and not user.enable_tailwind %}
@@ -261,7 +318,6 @@
                     Filters
                   </a>
                 {% endif %}
-
                 {% block page_top_end %}{% endblock page_top_end %}
               </div>
             </div>
@@ -271,19 +327,20 @@
             {% sitetree_breadcrumbs from "maintree" template "sitetree/breadcrumbs_bootstrap4.html" %}
 
             {% block page_top_archives %}{% endblock page_top_archives %}
+          {% else %}
+            <main role="main">
+          {% endif %}
 
-            {% block content %}{% endblock content %}
+          {% block content %}{% endblock content %}
+        </div>
 
-          </div>
-
+        {% if not enable_tailwind_flag and not user.enable_tailwind %}
           <aside class="col-xl-3 col-lg-3 d-none d-lg-block">
             {% block aside %}{% endblock aside %}
           </aside>
-        </div>
-      </main>
-    {% else %}
-      {% include 'tailwind/base_tailwind.html' %}
-    {% endif %}
+        {% endif %}
+      </div>
+    </main>
 
     {% if not enable_tailwind_flag and not user.enable_tailwind %}
       <footer class="blog-footer">
