--- a/links/templates/links/links_list.html
+++ b/links/templates/links/links_list.html
@@ -1,5 +1,11 @@
 {% for url in urls %}
-  <li>
-    <a class="nav-link" href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}">{{ url.title }}</a>
-  </li>
+  {% if not enable_tailwind_flag and not context.user.enable_tailwind %}
+    <li>
+      <a class="nav-link" href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}">{{ url.title }}</a>
+    </li>
+  {% else %}
+    <li>
+      <a href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">{% firstof url.featured_title url.title %}</a>
+    </li>
+  {% endif %}
 {% endfor %}
