--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base_post.html' %}
-{% load static featured_post offcanvas post_cards %}
+{% load static featured_post offcanvas post_cards comments %}
 
 {% block page_top %}
   {% if not enable_tailwind_flag and not user.enable_tailwind %}
@@ -134,10 +134,11 @@
                         <circle cx="12" cy="12" r="3"></circle>
                       </svg>{{ post.clicks }}
                     </span>
+                    {% get_comment_count for post as comment_count %}
                     <span class="text-gray-500 inline-flex items-center leading-none text-sm">
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"/>
-                      </svg>{{ post.tags.count }}
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
+                      </svg>{{ comment_count }}
                     </span>
                   </section>
                 </section>
