content gets bigger on big screens

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -40,7 +40,7 @@
         <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
           <section class="p-6">
             <h1 class="title-font text-5xl font-medium text-purple-200 mb-3 border-b-2 border-purple-200 ">{{ post.title }}</h1>
-            <div class="prose prose-purple">
+            <div class="prose lg:prose-lg xl:prose-xl prose-purple">
               {{ post.body|formatted_markdown|safe }}
             </div>
           </section>
